--- a/Styles/Servers.css
+++ b/Styles/Servers.css
@@ -5,8 +5,9 @@
     bottom: 0px;
     width: 75px;
     overflow-y: scroll;
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 10px;
   }
 
