--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -213,8 +213,8 @@
   background-color: var(--dark-color);
   right: 210px;
   width: 300px;
-  height: 80%;
-  top: calc(50% - 180px);
+  height: 90%;
+  top: 50px;
   border-radius: 8px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
   opacity: 0;
