--- a/Styles/Channels.css
+++ b/Styles/Channels.css
@@ -4,26 +4,31 @@
   bottom: 0px;
   left: 75px;
   width: 240px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
 }
 .channels-section *::selection{
   background: none;
 }
 .server-name {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  color: white;
-  font-weight: bold;
-  padding: 15px 15px;
-  cursor: pointer;
-  position: sticky;
+  position: relative;
   left: 0px;
   top: 0px;
   width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+  color: white;
+  font-weight: bold;
+  padding: 0px 15px;
+  cursor: pointer;
   background-color: #2b2d31;
-  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.1);
-  transition: 0.2s;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+  transition: 0.2s; 
 }
 .server-name:hover {
   background-color: #35373c;
@@ -79,7 +84,7 @@
 
 .channels-div {
   background-color: #2b2d31;
-  height: 100%;
+  flex:1;
   overflow-y: scroll;
 }
 .channels-div::-webkit-scrollbar {
@@ -155,20 +160,20 @@
 .user-div {
   display: flex;
   align-items: center;
-
-  position: absolute;
-  bottom: 0px;
   box-sizing: border-box;
   width: 100%;
   color: white;
   padding: 5px 5px;
   background-color: #232428;
-  font-size: 17px;
+  font-size: 17px;  
+  position: relative;
+
 }
 .user-div i {
   padding: 6px 8px;
   border-radius: 4px;
-  position: relative;
+  position: relative;  
+
 }
 .user-div i:hover .tooltip {
   transform: translateX(-50%) scale(1);
@@ -176,6 +181,7 @@
 }
 .user-div i .tooltip {
   position: absolute;
+  z-index: 122;
   bottom: 40px;
   left: 50%;
   transform: translateX(-50%) scale(0.7);
@@ -236,3 +242,7 @@
 .user-div:hover .user-status-text {
   margin-top: -21px;
 }
+
+
+
+
