--- a/Styles/Channels.css
+++ b/Styles/Channels.css
@@ -8,14 +8,10 @@
 }
 .server-name {
   position: relative;
-  left: 0px;
-  top: 0px;
-  width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   box-sizing: border-box;
   color: white;
   font-weight: bold;
@@ -36,13 +32,15 @@
   /* background-color: #2b2d31; */
   top: 60px;
   left: 50%;
+  max-height: 70dvh;
+  overflow-y: scroll;
   transform: translateX(-50%);
   background-color: var(--dark-color);
   display: none;
   padding: 7px;
   border-radius: 5px;
   width: 85%;
-  color: var(--grey-text);
+  color: var(--grey-color);
   font-size: 14px;
 }
 .server-menu p {
@@ -64,7 +62,13 @@
   background-color: transparent;
   margin: 0px;
 }
-
+.server-menu::-webkit-scrollbar {
+  width: 5px;
+}
+.server-menu::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: var(--light-color);
+}
 .server-name .fa-xmark {
   display: none;
 }
@@ -110,7 +114,7 @@
 }
 .category {
   margin-top: 0;
-  color: var(--grey-text);
+  color: var(--grey-color);
   font-size: 13px;
   flex: 1;
 }
@@ -125,7 +129,7 @@
 }
 .plus {
   margin: 0px;
-  color: var(--grey-text);
+  color: var(--grey-color);
   font-size: 20px;
 }
 
@@ -226,7 +230,7 @@
 }
 .user-status {
   font-size: 12px;
-  color: var(--grey-text);
+  color: var(--grey-color);
   height: 15px;
     margin: 0;
   overflow-y: hidden;
