--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -72,7 +72,6 @@
   opacity: 1;
 }
 
-
 .main-section-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -84,7 +83,7 @@
   padding: 0px 10px;
   overflow-y: scroll;
 }
-.members-section > * {
+.members-section > :not(label) {
   padding: 3px 10px;
 }
 .members-section::-webkit-scrollbar {
@@ -112,11 +111,14 @@
   border-radius: 3px;
   cursor: pointer;
   margin-bottom: 10px;
+  padding: 3px 10px;
+  cursor: pointer;
 }
 .member-offline {
   opacity: 0.3;
 }
-.member-container:hover {
+.member-container:hover,
+.member-container:has(input:focus) {
   background-color: var(--hover-color);
   opacity: 1;
 }
@@ -191,8 +193,12 @@
   color: var(--grey-color);
   font-size: 12px;
 }
-
-.member-img-container:hover .member-overview {
+.member-container> input {
+  position: fixed;
+  top: -100%;
+  opacity: 0;
+}
+.member-container:has(input:focus) .member-overview {
   opacity: 1;
   transform: scale(1);
   pointer-events: inherit;
@@ -204,7 +210,7 @@
   background-color: var(--dark-color);
   right: 210px;
   width: 300px;
-  height: 80%;
+  height: clamp(200px, 70%, 500px);
   top: 70px;
   border-radius: 8px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
@@ -216,10 +222,11 @@
   cursor: default;
   overflow-y: auto;
 }
+
 .member-overview::-webkit-scrollbar {
   width: 5px;
 }
-.member-overview::-webkit-scrollbar-track{
+.member-overview::-webkit-scrollbar-track {
   background: none;
 }
 .member-overview::-webkit-scrollbar-thumb {
@@ -233,6 +240,7 @@
   background-position: center;
   background-color: #96805a;
   height: 30%;
+
   border-top-left-radius: inherit;
   position: relative;
 }
@@ -246,6 +254,12 @@
   box-sizing: border-box;
   border: 7px solid var(--dark-color);
   transform: translateY(50%);
+}
+.member-img-overview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
 }
 .member-img-overview::after {
   width: 25px;
@@ -621,5 +635,3 @@
   height: 30px;
   min-width: 40%;
 }
-
-
