--- a/Styles/General.css
+++ b/Styles/General.css
@@ -7,7 +7,7 @@ body {
   grid-template-columns: 75px 240px 1fr;
   overflow: hidden;
 }
-body >*{
+body > * {
   height: 100dvh;
 }
 p {
@@ -61,26 +61,64 @@ a {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 120;
 }
-.note img{
+.note img {
   width: 25%;
 }
-.note div{
-  background-color:#313338;
+.inner-note {
+  background-color: #313338;
   color: var(--light-color);
   text-align: center;
   padding: 20px;
   width: 400px;
   position: relative;
+  border-radius: 5px;
 }
-.note-title{
+
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.inner-note::before,
+.inner-note::after {
+  --angle: 0deg;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  background-image: conic-gradient(from var(--angle), #00eaff, #5865f2,#00eaff);
+
+  padding: 3px;
+  border-radius: inherit;
+  z-index: -1;
+  animation: spin 4s linear infinite;
+}
+.inner-note::before {
+  filter: blur(10px);
+  opacity: 0.7;
+}
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
+}
+.note-title {
   font-size: 34px;
   font-weight: bold;
   color: white;
 }
-.note span{
+
+.note span {
   display: block;
-  margin-top:10px;
-  background-color: #5865f2;;
+  margin-top: 10px;
+  background-color: #5865f2;
   font-size: 20px;
   color: white;
   padding: 4px 15px;
@@ -88,16 +126,15 @@ a {
   transition: 0.2s;
   cursor: pointer;
 }
-.note span:hover{
-   background-color: #4d58d4;
+.note span:hover {
+  background-color: #4d58d4;
 }
-.note input{
+.note input {
   display: none;
 }
-.note:has(input:checked){
+.note:has(input:checked) {
   display: none;
 }
-
 
 .tooltip {
   font-size: 14px;
