--- a/Styles/Channels.css
+++ b/Styles/Channels.css
@@ -17,9 +17,13 @@
   font-weight: bold;
   padding: 0px 15px;
   cursor: pointer;
+  gap: 10px;
   background-color: #2b2d31;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
   transition: 0.2s; 
+}
+.server-name span{
+  flex:1;
 }
 .server-name:hover {
   background-color: #35373c;
@@ -134,7 +138,9 @@
 }
 
 .channels {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #93979e;
   font-size: 16px;
   cursor: pointer;
@@ -243,5 +249,12 @@
 }
 
 
+#show-main-section-button{
+  display: none;
+}
 
-
+@media (max-width: 499px){
+  #show-main-section-button{
+    display: block;
+  }
+}
