--- a/Styles/General.css
+++ b/Styles/General.css
@@ -8,7 +8,9 @@ body {
   overflow: hidden;
 }
 body > * {
-  height: 100dvh;
+  position: relative;
+  top: 0px;
+  bottom: 0px;
 }
 #left-section {
   display: grid;
