--- a/Styles/General.css
+++ b/Styles/General.css
@@ -6,10 +6,11 @@ body {
   display: grid;
   grid-template-columns: 315px 1fr;
   overflow: hidden;
+  height: 100dvh;
 }
 body > * {
   position: relative;
-height: 100dvh;
+height: 100%;
 }
 #left-section {
   display: grid;
