--- a/Styles/Channels.css
+++ b/Styles/Channels.css
@@ -180,17 +180,18 @@
   position: relative;  
 
 }
-.user-div i:hover .tooltip {
-  transform: translateX(-50%) scale(1);
-  opacity: 1;
-}
 .user-div i .tooltip {
   position: absolute;
   z-index: 122;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%) scale(0.7);
+  top :-40px;
+  right: 0;
+  transform: scale(0.7);
 }
+.user-div i:hover .tooltip {
+  transform: scale(1);
+  opacity: 1;
+}
+
 .user-overview {
   display: flex;
   align-items: center;
