--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -280,7 +280,7 @@
 .member-bio {
   margin: 5px 0px;
 }
-.lower-overview .matual {
+.lower-overview .Mutual {
   font-size: 12px;
   color: var(--light-color);
 }
