--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -375,7 +375,7 @@
   color: #383a40;
   margin: 0;
 }
-.message-bar input {
+#message-input {
   flex: 1;
   display: flex;
   align-items: center;
@@ -391,10 +391,10 @@
   color: var(--light-color);
   font-size: 16px;
 }
-.message-bar input::-webkit-scrollbar {
+#message-input::-webkit-scrollbar {
   display: none;
 }
-.message-bar input::placeholder {
+#message-input::placeholder {
   color: rgba(255, 255, 255, 0.2);
   font-family: "gg sans";
 }
@@ -438,6 +438,48 @@
 .plus-menu p:hover {
   background-color: #5865f2;
   color: var(--light-text);
+}
+
+.reply-bar {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 90%;
+  translate: 0 -100%;
+  box-sizing: border-box;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 10px 20px;
+  background-color: #2b2d31;
+  font-size: 16px;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+.reply-bar-active {
+  display: flex;
+}
+#reply-name {
+  color: yellow;
+}
+#cancel-reply{
+  cursor: pointer;
+  transition: 0.2s;
+  font-size: 14px;
+  padding: 3px 5px;
+  border-radius: 500px;
+  background-color: #b5bac1;;
+  color:#2b2d31;
+}
+#cancel-reply:hover{
+  background-color: #ffffff;
+
+}
+.message-bar-replied {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  margin-top: 40px;
 }
 
 .chat {
@@ -486,7 +528,8 @@
   color: var(--light-color);
 }
 
-.message {
+.message,
+.confirm-message {
   display: flex;
   gap: 15px;
   padding: 10px 20px;
@@ -660,4 +703,93 @@
   #show-left-section-button {
     display: block;
   }
+}
+
+.confirm-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -1000;
+  opacity: 0;
+  transition: 0.3s;
+}
+.confirm-active {
+  z-index: 1000;
+  opacity: 1;
+}
+#confirm-box {
+  background: #313338;
+  color: #b5bac1;
+  padding: 15px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 75%;
+}
+#confirm-title {
+  font-weight: bold;
+  font-size: 18px;
+  color: white;
+}
+.confirm-message {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+#confirm-buttons {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+}
+#confirm-buttons button {
+  border: none;
+  cursor: pointer;
+  color: #b5bac1;
+}
+#cancel-button {
+  background: none;
+  border: none;
+}
+#cancel-button:hover {
+  text-decoration: underline;
+}
+#delete-button {
+  font-weight: bold;
+  background: rgb(186, 39, 39);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+#delete-button:hover {
+  background: rgb(165, 35, 35);
+}
+.message-edit-input{
+  outline: none;
+  border: solid 1px #b5bac1;
+  background: rgba(0, 0, 0, 0.1);
+  color:white;
+  overflow: hidden;
+  resize: none;
+  padding: 15px 20px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  direction: rtl;
+  font-size: 16px;
+  width: 100%;
+}
+
+.message-edit-input::-webkit-scrollbar {
+  display: none;
+}
+.message-edit-input::placeholder {
+  color: rgba(255, 255, 255, 0.2);
+  font-family: "gg sans";
 }
