--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -802,7 +802,7 @@
 
 #loading-messages{
   margin-top: 100px;
-  color:#93979e;;
+  color:#676a6f;;
   font-family: "gg sans";
   font-size: 64px;
   font-weight: bold;
