--- a/Styles/Sign.css
+++ b/Styles/Sign.css
@@ -1,18 +1,22 @@
-body {
+body,
+.main-container {
   font-family: "gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial,
     sans-serif, "Apple Symbols";
   margin: 0;
-  /* background-image: url("../Images/wallpaper2.jpg");
+  background: rgb(48, 49, 56);
+  background-image: url("../Images/wallpaper3.jpg");
   background-size: cover;
   background-position: bottom;
-  background-repeat: no-repeat; */
-  background-color: rgb(48, 49, 56);
+  background-repeat: no-repeat; /* */
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100dvh;
 }
-
+.main-container {
+background: #00000019;
+width: 100%;
+}
 main {
   position: relative;
   margin: 20px 0px;
@@ -24,7 +28,7 @@ main {
   background: #1e1f22;
   color: white;
   border-radius: 10px;
-  min-width: 300px;
+  min-width: 270px;
 }
 
 @property --angle {
@@ -45,17 +49,20 @@ main {
 
   background-image: conic-gradient(
     from var(--angle),
-    #00eeff,
-    #0077ff,
-    #00eeff
+    #ffc400,
+    #00ff62,
+    #00b7ff,
+    #00ff62,
+    #ffc400
   );
-  padding: 2px;
-  border-radius: inherit;
+  padding: 1px;
+
   z-index: -1;
   animation: spin infinite 4s linear;
+  border-radius: 10px;
 }
 .blurred {
-  filter: blur(5px);
+  filter: blur(3px);
   opacity: 0.7;
 }
 @keyframes spin {
@@ -173,7 +180,8 @@ main {
 #sign-out:hover {
   text-decoration: underline;
 }
-#continue, #sign-in-button{
+#continue,
+#sign-in-button {
   font-size: 16px;
   background: #5865f2;
   padding: 5px 10px;
@@ -185,7 +193,8 @@ main {
   border: none;
   cursor: pointer;
 }
-#continue:hover, #sign-in-button:hover {
+#continue:hover,
+#sign-in-button:hover {
   background: #4752c4;
 }
 
@@ -234,14 +243,15 @@ main {
 #sign-in-container {
   display: none;
   flex-direction: column;
-  align-items: center;  width: 100%;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100%;
   gap: 15px;
 }
 #sign-in-user {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
 }
 #sign-in-user .user-img {
   width: 100%;
@@ -253,46 +263,48 @@ main {
 #sign-in-user .user-name {
   font-size: 32px;
 }
-#sign-in-form{
+#sign-in-form {
   display: flex;
   flex-direction: column;
   align-items: start;
   gap: 10px;
   width: 90%;
 }
-#password{
+#sign-in-form input {
   border-radius: 5px;
   border: none;
   outline: none;
   padding: 8px;
-  color:white;
+  color: white;
   background: rgba(255, 255, 255, 0.1);
   box-sizing: border-box;
   width: 100%;
 }
-#sign-in-container .img-container{
+#sign-in-container .img-container {
   position: relative;
   width: 100px;
   height: 100px;
   border-radius: 200px;
 }
 
-#sign-in-container .img-container .border{
-z-index: 0;
-padding: 1px;
-background-image: conic-gradient(
-  from var(--angle),
-  #ffdd00,
-  #66ff00,
-  #ffdd00
-);  animation: spin infinite 3s linear;
+#sign-in-container .img-container .border {
+  z-index: 0;
+  padding: 1px;
+  background-image: conic-gradient(
+    from var(--angle),
+    #ffdd00,
+    #66ff00,
+    #ffdd00
+  );
+  animation: spin infinite 3s linear;
+  border-radius: inherit;
 }
 #sign-in-container .img-container .border .blurred {
   filter: blur(3px);
   opacity: 0.5;
 }
 
-#back-button{
+#back-button {
   display: none;
   position: absolute;
   top: 12px;
@@ -302,14 +314,14 @@ background-image: conic-gradient(
   font-size: 18px;
   padding: 5px;
 }
-#back-button:hover{
+#back-button:hover {
   text-decoration: underline;
 }
 
-#guest{
+#guest {
   cursor: pointer;
   padding: 5px 10px;
 }
-#guest:hover{
+#guest:hover {
   text-decoration: underline;
 }
