--- a/Styles/General.css
+++ b/Styles/General.css
@@ -2,7 +2,7 @@ body {
   font-family: "gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial,
     sans-serif, "Apple Symbols";
   margin: 0;
-  background-image: url("../Images/wallpaper.jpg");
+  background-image: url("../Images/wallpaper3.jpg");
   background-size: cover;
   background-position: center;
   /* background:#313338; */
